# hydracache

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HYDRACACHE_ARCHITECTURE_REVIEW.md  HYDRACACHE_REFERENCE_REREAD_INDEX.md  HYDRACACHE_UNIFIED_ARCHITECTURE.md  README.md  ROADMAP.md  deny.toml  playwright.config.mjs
crates/hydracache-actuator-axum/: Cargo.toml
crates/hydracache-actuator-axum/src/: lib.rs
crates/hydracache-actuator-axum/tests/: cluster_pilot_report_snapshot.rs  cluster_staging_health_snapshot.rs
crates/hydracache-cache-sim/: Cargo.toml
crates/hydracache-cache-sim/src/: digest.rs  lib.rs  trace_catalog.rs  workload.rs
crates/hydracache-cache-sim/tests/: cache_efficiency.rs  performance_contract_067.rs
crates/hydracache-cache-sim/traces/: recency_ttl.trace  skewed_zipfian.trace  standard.trace
crates/hydracache-cdc-postgres/: Cargo.toml
crates/hydracache-cdc-postgres/src/: lib.rs
crates/hydracache-cdc-postgres/tests/: synthetic.rs
crates/hydracache-client/: Cargo.toml
crates/hydracache-client-protocol/: Cargo.toml
crates/hydracache-client-protocol/manifests/: unsupported_hazelcast_apis.txt
crates/hydracache-client-protocol/src/: hibernate.rs  java_migration.rs  lib.rs
crates/hydracache-client-protocol/tests/: fixtures.rs  hibernate_contract.rs  imap_cas.rs  imap_entry_listener.rs  java_lock_mapping.rs  java_migration_contract.rs  lock_wire.rs  protocol.rs  versioned_codec.rs
crates/hydracache-client-transport-axum/: Cargo.toml
crates/hydracache-client-transport-axum/src/: lib.rs
crates/hydracache-client-transport-axum/tests/: cancellation_safety.rs  client_surface.rs  client_surface_conformance.rs  protocol_compat.rs
crates/hydracache-client/src/: lib.rs
crates/hydracache-client/tests/: conformance.rs
crates/hydracache-cluster/: Cargo.toml  README.md
crates/hydracache-cluster-chitchat/: Cargo.toml  README.md
crates/hydracache-cluster-chitchat/src/: lib.rs
crates/hydracache-cluster-raft/: Cargo.toml  README.md
crates/hydracache-cluster-raft/src/: lib.rs  log_store.rs
crates/hydracache-cluster-raft/tests/: cancellation_safety.rs  chitchat_admission_bridge.rs  compaction_seam.rs  compat_matrix.rs  differential_model.rs  differential_modes.rs  durable_control_plane.rs  durable_recovery_corpus.rs  durable_runtime.rs  failpoints_crash_safety.rs  golden_vectors.rs  gossip_fault_harness.rs  inbound_wire_validation.rs  io_chaos_boundaries.rs  leadership_handoff.rs  loom_concurrency.rs  membership_load.rs  model_check.rs  nemesis_membership.rs  networked_raft.rs  persistent_log.rs  prevote_nightly_soak.rs  proposal_idempotency.rs  raft_corpus_vectors.rs  raft_message_filter.rs  raft_snapshot_membership.rs  rejoin_after_compaction.rs  scheduler_tick.rs  sled_log_store.rs  snapshot_apply.rs  snapshot_corruption.rs  snapshot_delivery_chaos.rs  snapshot_exhaustive_grid.rs  snapshot_immutability.rs  snapshot_replay_manifest.rs  snapshot_resource_faults.rs  staging_gate.rs  tsan_canary.rs  wire_properties.rs
crates/hydracache-cluster-testkit/: Cargo.toml
crates/hydracache-cluster-testkit/src/: client_surface_conformance.rs  invariants.rs  lib.rs  reference_model.rs
crates/hydracache-cluster-testkit/tests/: client_surface_conformance_oracle.rs  invariants.rs
crates/hydracache-cluster-transport-axum/: Cargo.toml  README.md
crates/hydracache-cluster-transport-axum/src/: lib.rs  tls.rs
crates/hydracache-cluster-transport-axum/tests/: cluster_auth.rs  replication.rs  staging_gate.rs  tls.rs
crates/hydracache-cluster/src/: lib.rs
crates/hydracache-core/: Cargo.toml
crates/hydracache-core/src/: codec.rs  error.rs  events.rs  key.rs  lib.rs  options.rs  stats.rs  tags.rs
crates/hydracache-db/: Cargo.toml
crates/hydracache-db/benches/: outbox_write.rs
crates/hydracache-db/src/: entity.rs  error.rs  hooks.rs  invalidation.rs  lib.rs  lint.rs  outbox.rs  policy.rs  prepared.rs  profiles.rs  query.rs  reconcile.rs  sqlx_outbox.rs  tests.rs  transaction.rs
crates/hydracache-db/tests/: dependency.rs  derive_ui.rs  hook_failures.rs  hook_sql_snapshot.rs  mysql_hooks.rs  outbox_barrier.rs  outbox_claims.rs  outbox_postgres.rs  outbox_property.rs  outbox_schema_migration.rs  outbox_sqlite.rs  outbox_worker.rs  policy_guide.rs  postgres_hooks.rs  production_validation.rs  profile_runtime.rs  profiles.rs  reconcile.rs  reconcile_sqlite.rs  release_37_docs.rs  required_dimensions.rs  runtime_dep_isolation.rs  sqlite_hooks.rs  weigher.rs
crates/hydracache-diesel/: Cargo.toml  README.md
crates/hydracache-diesel/src/: lib.rs
crates/hydracache-loadgen/: Cargo.toml
crates/hydracache-loadgen/src/: allocation.rs  budget_receipt.rs  cli.rs  compare_redis.rs  histogram.rs  knee.rs  lib.rs  main.rs  metrics_honesty.rs  overload.rs  profile.rs  rate.rs  report.rs  resp_external.rs  runner.rs  scenario.rs  target.rs
crates/hydracache-loadgen/tests/: performance_contract_067.rs  resp_external_067.rs  w4_split_067.rs  w5_brownout_067.rs  w6_overload_067.rs  w8_redis_compare_067.rs  w9_metrics_067.rs
crates/hydracache-macros/: Cargo.toml
crates/hydracache-macros/src/: cacheable.rs  config.rs  entity.rs  lib.rs  paths.rs  policy.rs  prepared_policy.rs
crates/hydracache-observability/: Cargo.toml
crates/hydracache-operator/: Cargo.toml
crates/hydracache-operator/src/: crd.rs  (+10 more)
crates/hydracache-redis-compat/: Cargo.toml  README.md
crates/hydracache-sandbox/: .env  .env.example  Cargo.toml
crates/hydracache-seaorm/: Cargo.toml  README.md
crates/hydracache-server/: Cargo.toml
crates/hydracache-sim/: Cargo.toml
crates/hydracache-sim-wasm/: Cargo.toml
crates/hydracache-sql-lint/: Cargo.toml
crates/hydracache-sqlx/: Cargo.toml
crates/hydracache-transport-nats/: Cargo.toml  README.md
crates/hydracache-transport-redis/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_kv_codec.rs  fuzz_resp_command.rs  fuzz_snapshot_decode.rs  raft_wire_frame.rs
fuzz/src/: lib.rs
fuzz/tests/: fuzz_corpus_regression.rs
(+975 files in other folders)
