[workspace]
members = [
    "crates/hydracache",
    "crates/hydracache-core",
    "crates/hydracache-sqlx",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["HydraCache Contributors"]
repository = "https://github.com/javaquasar/hydracache"
homepage = "https://github.com/javaquasar/hydracache"
readme = "README.md"
keywords = ["cache", "caching", "async", "runtime"]
categories = ["caching", "asynchronous"]

[workspace.dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
futures-util = "0.3.32"
hydracache-core = { path = "crates/hydracache-core", version = "0.7.0" }
hydracache = { path = "crates/hydracache", version = "0.7.0" }
loom = "0.7.2"
moka = { version = "0.12.15", features = ["future"] }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
