[workspace]
members = [
    "crates/hydracache",
    "crates/hydracache-actuator-axum",
    "crates/hydracache-cluster",
    "crates/hydracache-cluster-chitchat",
    "crates/hydracache-cluster-raft",
    "crates/hydracache-cluster-transport-axum",
    "crates/hydracache-core",
    "crates/hydracache-db",
    "crates/hydracache-macros",
    "crates/hydracache-observability",
    "crates/hydracache-sandbox",
    "crates/hydracache-sqlx",
]
resolver = "2"

[workspace.package]
version = "0.28.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["HydraCache Contributors"]
repository = "https://github.com/javaquasar/hydracache"
homepage = "https://github.com/javaquasar/hydracache"
readme = "README.md"
keywords = ["cache", "caching", "async", "runtime"]
categories = ["caching", "asynchronous"]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8"
base64 = "0.22.1"
bytes = "1.11.1"
chitchat = "0.11.0"
futures-util = "0.3.32"
hydracache-core = { path = "crates/hydracache-core", version = "0.28.0" }
hydracache = { path = "crates/hydracache", version = "0.28.0" }
hydracache-cluster = { path = "crates/hydracache-cluster", version = "0.28.0" }
hydracache-cluster-chitchat = { path = "crates/hydracache-cluster-chitchat", version = "0.28.0" }
hydracache-cluster-raft = { path = "crates/hydracache-cluster-raft", version = "0.28.0" }
hydracache-cluster-transport-axum = { path = "crates/hydracache-cluster-transport-axum", version = "0.28.0" }
hydracache-db = { path = "crates/hydracache-db", version = "0.28.0" }
hydracache-macros = { path = "crates/hydracache-macros", version = "0.28.0" }
hydracache-observability = { path = "crates/hydracache-observability", version = "0.28.0" }
loom = "0.7.2"
moka = { version = "0.12.15", features = ["future"] }
postcard = { version = "1.1.3", features = ["alloc"] }
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
slog = "2.7"
sqlx = { version = "0.8", default-features = false }
syn = { version = "2", features = ["full"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
trybuild = "1"
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
