[package]
name = "hydracache-actuator-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Axum read-only actuator endpoints for HydraCache diagnostics."

[dependencies]
axum.workspace = true
hydracache.workspace = true
hydracache-observability.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
