[package]
name = "hydracache-client-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Stable external client protocol primitives for HydraCache."

[dependencies]
bytes.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
