[package]
name = "hydracache-client-transport-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Axum route boundary for HydraCache external client traffic."

[dependencies]
axum.workspace = true
bytes.workspace = true
hydracache.workspace = true
hydracache-client-protocol.workspace = true
hydracache-observability.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
futures-util.workspace = true
hydracache-cluster-testkit.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
