[package]
name = "hydracache-cluster-raft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "raft-rs metadata control-plane runtime for HydraCache cluster mode"
readme = "README.md"

[features]
default = []
sled-log-store = []

[dependencies]
async-trait.workspace = true
hydracache.workspace = true
raft.workspace = true
slog.workspace = true

[dev-dependencies]
chitchat.workspace = true
hydracache-cluster-chitchat.workspace = true
tokio.workspace = true
