[package]
name = "hydracache-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Database-neutral query result cache adapter for HydraCache."

[dependencies]
hydracache.workspace = true
hydracache-core.workspace = true
hydracache-macros.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
trybuild.workspace = true
