[package]
name = "hydracache-diesel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Diesel adapter helpers for HydraCache query result caching."

[dependencies]
async-trait.workspace = true
diesel.workspace = true
hydracache.workspace = true
hydracache-core.workspace = true
hydracache-db.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
diesel = { workspace = true, features = ["sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }

[lints]
workspace = true
