[package]
name = "hydracache-loadgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Development-only open-loop performance characterization tool for HydraCache."
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
hdrhistogram.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
jsonschema.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
