[package]
name = "hydracache-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Framework-neutral observability snapshots and cache registry for HydraCache."

[dependencies]
async-trait.workspace = true
hydracache.workspace = true
hydracache-core.workspace = true
serde.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
