[package]
name = "hydracache-operator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Kubernetes operator scaffolding for HydraCache clusters."
# Deployable controller binary; shipped as manifests/container image, not as a crates.io library.
publish = false

[dependencies]
futures-util.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
reqwest.workspace = true
rustls.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
