[package]
name = "hydracache-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standalone production server daemon for HydraCache."

[dependencies]
axum.workspace = true
hydracache.workspace = true
hydracache-client-transport-axum.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
hydracache-client-protocol.workspace = true
hydracache-observability.workspace = true
serde_json.workspace = true
tower.workspace = true

[lints]
workspace = true
