[package]
name = "hydracache-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standalone production server daemon for HydraCache."

[dependencies]
async-trait.workspace = true
axum.workspace = true
axum-server.workspace = true
hydracache.workspace = true
hydracache-actuator-axum.workspace = true
hydracache-client-transport-axum.workspace = true
hydracache-cluster-chitchat.workspace = true
hydracache-cluster-raft = { workspace = true, features = ["sled-log-store"] }
hydracache-cluster-transport-axum.workspace = true
hydracache-observability.workspace = true
hydracache-redis-compat.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true

[dev-dependencies]
hydracache-client-protocol.workspace = true
hydracache-cluster-testkit.workspace = true
hydracache-sim.workspace = true
proptest.workspace = true
raft.workspace = true
rcgen.workspace = true
tower.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
