[package]
name = "hydracache-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hydracache = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
